force-app/main/default/objects/General__c/General__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>General</label>
</CustomObject>