force-app/main/default/objects/General__c/fields/Default_Policy_Owner_For_Production__c.field-meta.xml
<CustomField>
    <fullName>Default_Policy_Owner_For_Production__c</fullName>
    <description>Should include the Id Of the default policy owner (user)</description>
    <label>Default Policy Owner For Production</label>
    <length>18</length>
    <type>Text</type>
</CustomField>