force-app/main/default/objects/General__c/fields/Email_Template_Insurance_Cross_Sales__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Insurance_Cross_Sales__c</fullName>
    <label>Email Template Insurance Cross Sales</label>
    <length>255</length>
    <type>Text</type>
</CustomField>