force-app/main/default/objects/General__c/fields/Email_to_reply_Insurance_Cross_Sales__c.field-meta.xml
<CustomField>
    <fullName>Email_to_reply_Insurance_Cross_Sales__c</fullName>
    <label>Email to reply Insurance Cross Sales</label>
    <length>255</length>
    <type>Text</type>
</CustomField>