force-app/main/default/objects/General__c/fields/Match_By_Num_And_Prod_Cats_Csv__c.field-meta.xml
<CustomField>
    <fullName>Match_By_Num_And_Prod_Cats_Csv__c</fullName>
    <description>Used to determine for which categories the matching of policies WITH numbers will be by  product as well as the number (in case same policy number received for 2 different products). All Other non specified categories - the productions with prod defs belonging to them - will be matched to policies by numbers only.
If no csv specified then all categories\product defs will be matched by number AND product</description>
    <label>Match By Num And Prod Cats Csv</label>
    <length>255</length>
    <type>Text</type>
</CustomField>