force-app/main/default/objects/General__c/fields/Match_vehicle_prod_by_broker_number__c.field-meta.xml
<CustomField>
    <fullName>Match_vehicle_prod_by_broker_number__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines whether to include broker number in the  vehicle production match</description>
    <label>Match vehicle prod by broker number</label>
    <type>Checkbox</type>
</CustomField>