force-app/main/default/objects/General__c/fields/Num_Job_Process_Tx_Policy_Create__c.field-meta.xml
<CustomField>
    <fullName>Num_Job_Process_Tx_Policy_Create__c</fullName>
    <defaultValue>20</defaultValue>
    <description>number of records to process in each job batch when creating multiple policies through merge transaction screen</description>
    <label>Num Job Process Tx  Policy Create</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>