force-app/main/default/objects/General__c/fields/Personal_Category__c.field-meta.xml
<CustomField>
    <fullName>Personal_Category__c</fullName>
    <description>SHould be populated with csv of categories.
Policy transaction with product definitions that point to these categories can be used to create multiple policies in one button click.</description>
    <label>Personal Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>