force-app/main/default/objects/General__c/fields/Policy_Non_Owners_Csv__c.field-meta.xml
<CustomField>
    <fullName>Policy_Non_Owners_Csv__c</fullName>
    <description>Hold csv of user ids who should not be owners of policies. In use mainly in receiving productions</description>
    <label>Policy Non Owners Csv</label>
    <length>255</length>
    <type>Text</type>
</CustomField>