force-app/main/default/objects/General__c/fields/Policy_Tx_Table_Override_Car_Manufacurer__c.field-meta.xml
<CustomField>
    <fullName>Policy_Tx_Table_Override_Car_Manufacurer__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Policy Tx Table Override Car Manufacurer</label>
    <type>Checkbox</type>
</CustomField>