force-app/main/default/objects/General__c/fields/Process_Compatible_Tx_Without_Account__c.field-meta.xml
<CustomField>
    <fullName>Process_Compatible_Tx_Without_Account__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used to decide whether to process policy tx when the account onj the tx is not recognized bu the status i scomopatible and there is a matching policy</description>
    <label>Process Compatible Tx Without Account</label>
    <type>Checkbox</type>
</CustomField>