force-app/main/default/objects/General__c/fields/Production_Permission_Prefix_Group__c.field-meta.xml
<CustomField>
    <fullName>Production_Permission_Prefix_Group__c</fullName>
    <label>Production Permission Prefix Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>