force-app/main/default/objects/General__c/fields/Resolve_Broker_Numbers_By_Profit_Center__c.field-meta.xml
<CustomField>
    <fullName>Resolve_Broker_Numbers_By_Profit_Center__c</fullName>
    <description>This should contain Id of a profit center to be used when there is a need to decide between identical broker numbers as might happen during Production processing</description>
    <label>Resolve Broker Numbers By Profit Center</label>
    <length>18</length>
    <type>Text</type>
</CustomField>