force-app/main/default/objects/General__c/fields/Set_Policy_Managed_By_Production_Off__c.field-meta.xml
<CustomField>
    <fullName>Set_Policy_Managed_By_Production_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controlls whether to set the Managed By Production flag on the policy object to false when business logic requires.</description>
    <label>Set Policy Managed By Production Off</label>
    <type>Checkbox</type>
</CustomField>