force-app/main/default/objects/General__c/fields/Vehicle_Production_Merge_Categories_Csv__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Production_Merge_Categories_Csv__c</fullName>
    <description>csv of category Ids that need a specific automatic matching rule</description>
    <label>Vehicle Production Merge Categories Csv</label>
    <length>255</length>
    <type>Text</type>
</CustomField>